Add authentication for API
Using jsonwebtoken authentication strategy. Client
sends email and password in body request. Server
responds with a token, which can be used on future api
requests. Note this requires us disabling the CSRF
protections on api routes, since the POST will happen
without a CSRF token. This is fine, though, since the api
is not meant to be consumed via a browser.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-validator": "^2.20.6",
     "http": "0.0.0",
     "jade": "^1.11.0",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^4.12.0",
     "lusca": "^1.4.1",
     "moment": "^2.14.1",
@@ -36,6 +37,7 @@
     "passport": "0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
+    "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0",
     "passport-oauth": "^1.0.0",
     "passport.socketio": "~3.6.1",
